Fix sorting of single valued numeric fields